update portfolio hidden notes

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Cameron Clare: Portfolio</h1>
+    <h1>Cameron Clare: Portfolio ya see</h1>
 
     <nav>
       <p>
